# bffextract-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yml  test.yml
bffextract/: Cargo.toml
bffextract/src/: main.rs
bfflib/: Cargo.toml
bfflib/src/: acl.rs  archive.rs  attribute.rs  bff.rs  error.rs  extract.rs  huffman.rs  lib.rs  util.rs
resources/test/: acl_aixc_nfs4.bff  huffman.txt  test.bff  test_acl.bff
src/: bff.rs  error.rs  huffman.rs  io.rs  lib.rs  main.rs  util.rs
