[package]
name = "bffextract"
version = "0.3.3"
edition = "2021"
authors = ["Michael Richter <mr@osor.de>"]
description = "Extract content of BFF file (AIX Backup file format)"
readme = "README.md"
repository = "https://github.com/ponchofiesta/bffextract-rs"
license = "MIT"
keywords = ["bff", "aix", "extract", "unpack", "decompress"]
categories = ["command-line-utilities", "compression"]

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive"] }
comfy-table = { version = "7.1.0", default-features = false }
file-mode = "0.1.2"
filetime = "0.2.23"
normalize-path = "0.2.1"

[target.'cfg(unix)'.dependencies]
users = { version = "0.11.0", default-features = false, features = ["cache"] }

[dev-dependencies]
mockall = "0.12.1"