[workspace]
members = [
    "bfflib",
    "bffextract",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"
authors = ["Michael Richter <mr@osor.de>"]
description = "Extract content of BFF file (AIX Backup file format)"
readme = "README.md"
repository = "https://github.com/ponchofiesta/bffextract-rs"
license = "MIT OR Apache-2.0"
keywords = ["bff", "aix", "extract", "unpack", "decompress"]

[workspace.dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["now"] }
clap = { version = "4.5.4", default-features = false, features = ["derive", "std"] }
comfy-table = { version = "7.1.1", default-features = false }
file-mode = "0.1.2"
filetime = "0.2.23"
normalize-path = "0.2.1"
users = { version = "0.11.0", default-features = false, features = ["cache"] }
tempfile = "3.10.1"
