[package]
name = "bffextract"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = ["command-line-utilities", "compression"]

[[bin]]
name = "bffextract"
path = "src/main.rs"

[dependencies]
bfflib = { path = "../bfflib", version = "0.7.1" }
chrono = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
file-mode = { workspace = true }
filetime = { workspace = true }
normalize-path = { workspace = true }

[target.'cfg(unix)'.dependencies]
users = { workspace = true }
